# kryzhen

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix
.github/workflows/: release.yml
doc/: crates.js  help.html  settings.html  src-files.js
doc/check/: all.html  index.html
doc/search.index/: root.js
doc/search.index/name/: 06c1570565.js
doc/src/check/: null.html
docs/: development.md
docs/superpowers/plans/: 2026-06-12-kryzhen-mallard-rust-port.md
docs/superpowers/specs/: 2026-06-12-kryzhen-mallard-rust-port-design.md
kryzhen/: Cargo.toml
kryzhen-cli/: Cargo.toml
kryzhen-cli/src/: main.rs
kryzhen/src/: file.rs  graph.rs  lib.rs  parser.rs  postgres.rs  sqlx_import.rs  types.rs  validation.rs
kryzhen/tests/: applier.rs
kryzhen/tests/fixtures/mallard-example-contacts/: schema.sql
kryzhen/tests/fixtures/mallard-example-contacts/tables/: person.sql  phone.sql
kryzhen/tests/fixtures/mallard-example-contacts/tests/: sample-person.sql
