[workspace]
members = ["kryzhen", "kryzhen-cli"]
resolver = "2"

[workspace.package]
version = "0.8.0"
edition = "2021"
license = "Apache-2.0"

[workspace.dependencies]
thiserror = "1"
sha2 = "0.10"
walkdir = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tokio-postgres = "0.7"
postgres-native-tls = { version = "0.5.3", features = ["runtime"] }
native-tls = "0.2.18"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
winnow = "0.6"
