[package]
name = "kryzhen"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
thiserror.workspace = true
sha2.workspace = true
walkdir.workspace = true
tokio.workspace = true
tokio-postgres.workspace = true
postgres-native-tls.workspace = true
native-tls.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["postgres"] }
